modifico: agrego imagenes y links de recetas

--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -44,7 +44,7 @@
                 </div>
 
                 <div class="sobremi-foto">
-                    <img src="../images/titulo.png" alt="Foto Camila" class="foto-perfil"/>
+                    <img src="../images/titulo.png" alt="Foto de Camila Guidotti con diploma de nutrición" class="foto-perfil"/>
                 </div>
             </div>
         </section>
