--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
    <main>
         <section class="hero">
             <div class="hero-image">
-                <img src="" alt="imagen generica">
+                <img src="./images/pexels-mix-and-match-studio-2662809-4227061.jpg" alt="Foto de Camila Guidotti">
             </div>
             <div class="hero-text">
                 <h2>Titulo</h2>
