unificacion de colores y organizazcion del .css

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -48,7 +48,7 @@
                     <input type="tel" name="telefono" placeholder="Teléfono" required/>
                     
                     <select name="motivo" required>
-                        <option value="" disable selected>Motivo de contacto</option>
+                        <option value="" disabled selected>Motivo de contacto</option>
                         <option value="consulta">Consulta general</option>
                         <option value="planes">Planes y precios</option>
                         <option value="receta">Recetas</option>
