--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -3,31 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="../styles.css">
     <title>Nutricionista Camila Guidotti | Uruguay</title>
 </head>
 <body>
     <header> 
-    <div class="header-container">
-            <div class="profile">
-                <i class="profile-icon"></i>
+    <div class="header-container d-flex flex-wrap justify-content-between align-items-center">
+            <div class="profile d-flex align-items-center">
                 <a href="../index.html">
-                <img src="../images/logo.jpg" alt="Logo Camila Guidotti" class="logo" />
+                <img src="../images/logo.jpg" alt="Logo Camila Guidotti" class="logo rounded-circle me-2" />
                 </a>
                 <div class="profile-text">
                     <h1>Camila Guidotti</h1>
                     <p>Licenciada en Nutrición</p>
                 </div>
             </div>
-            <nav>
-                <ul class="nav-links">
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="sobremi.html">Sobre mi</a></li>
-                    <li><a href="planes.html">Planes</a></li>
-                    <li><a href="recetas.html">Recetas</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                 </ul>
+            <nav class="navbar navbar-expand-lg navbar-light p-0">
+                <div class="container-fluid p-0">
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  
+                  <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                          <a class="nav-link active" href="../index.html">Inicio</a>  
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./sobremi.html">Sobre mí</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./planes.html">Planes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./recetas.html">Recetas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                  </div>
+                </div>
             </nav>
         </div>
     </header>
