--- a/pages/planes.html
+++ b/pages/planes.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Nutricionista Camila Guidotti | Uruguay</title>
 </head>
 <body>
@@ -27,25 +27,25 @@
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   
-                  <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                          <a class="nav-link active" href="../index.html">Inicio</a>  
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./sobremi.html">Sobre mí</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./planes.html">Planes</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./recetas.html">Recetas</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./contacto.html">Contacto</a>
-                        </li>
-                    </ul>
-                  </div>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ms-auto">
+                            <li class="nav-item">
+                            <a class="nav-link active" href="../index.html">Inicio</a>  
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./sobremi.html">Sobre mí</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./planes.html">Planes</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./recetas.html">Recetas</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./contacto.html">Contacto</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </nav>
         </div>
