fix error navbar

--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -30,10 +30,10 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
-                               <a class="nav-link active" href="../index.html">Inicio</a>  
+                               <a class="nav-link" href="../index.html">Inicio</a>  
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./sobremi.html">Sobre mí</a>
+                                <a class="nav-link active" href="./sobremi.html">Sobre mí</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./planes.html">Planes</a>
