--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -30,7 +30,7 @@
                   <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                          <a class="nav-link active" href="../index.html">Inicio</a>  
+                          <a class="nav-link" href="../index.html">Inicio</a>  
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./sobremi.html">Sobre mí</a>
@@ -42,7 +42,7 @@
                             <a class="nav-link" href="./recetas.html">Recetas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./contacto.html">Contacto</a>
+                            <a class="nav-link active" href="./contacto.html">Contacto</a>
                         </li>
                     </ul>
                   </div>
