--- a/pages/planes.html
+++ b/pages/planes.html
@@ -30,13 +30,13 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
-                            <a class="nav-link active" href="../index.html">Inicio</a>  
+                            <a class="nav-link" href="../index.html">Inicio</a>  
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./sobremi.html">Sobre mí</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./planes.html">Planes</a>
+                                <a class="nav-link active" href="./planes.html">Planes</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./recetas.html">Recetas</a>
