--- a/index.html
+++ b/index.html
@@ -56,10 +56,9 @@
                 <img src="./images/pexels-mix-and-match-studio-2662809-4227061.jpg" alt="Foto de Camila Guidotti">
             </div>
             <div class="hero-text">
-                <h2>Titulo</h2>
+                <h2>Bienvenido a mi consulta nutricional</h2>
                 <p>
-                    Sollicitant homines non sunt nisi quam formae rerum principiis opiniones. 
-                    Mors enim est terribilis ut Socrati aliud esse appareat. Sed timor.
+                    Te ayudo a alcanzar tus objetivos de salud con planes personalizados y recetas saludables.
                 </p>
                 <a href="./pages/contacto.html" class="cta-button">Contacto</a>
             </div>
