--- a/pages/planes.html
+++ b/pages/planes.html
@@ -55,17 +55,17 @@
             <div class="planes-container">
                 <div class="plan-card">
                     <h2>Consulta</h2>
-                    <p>Post votum promissa memini cuius adeptione cupis; quem pollicitus est aversione aversi et fuga. Qui autem de re desit libido frustra.</p>
+                    <p>Sesión individual para evaluación nutricional y recomendaciones personalizadas.</p>
                     <a href="contacto.html" class="plan-button">Me interesa</a>
                 </div>
                 <div class="plan-card">
                     <h2>Plan</h2>
-                    <p>Post votum promissa memini cuius adeptione cupis; quem pollicitus est aversione aversi et fuga. Qui autem de re desit libido frustra.</p>
+                    <p>Plan mensual con seguimiento semanal y ajustes según tu progreso.</p>
                     <a href="contacto.html" class="plan-button">Me interesa</a>
                 </div>
                 <div class="plan-card">
                     <h2>Plan <br><span class="subtitulo">Seguimiento</span></h2>
-                    <p>Post votum promissa memini cuius adeptione cupis; quem pollicitus est aversione aversi et fuga. Qui autem de re desit libido frustra.</p>
+                    <p>Seguimiento personalizado para mantener hábitos saludables a largo plazo.</p>
                     <a href="contacto.html" class="plan-button">Me interesa</a>
                 </div>
             </div>
