--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -56,10 +56,13 @@
             <div class="sobremi-content">
                 <div class="sobremi-texto">
                     <h2>Sobre mí</h2>
-                    <p>Presentación personal. Sollicitant homines non sunt nisi quam formae rerum principiis opiniones. Mors enim est terribilis ut Socrati aliud esse appareat. Sed timor.</p>
+                    <p>Soy Camila Guidotti, licenciada en Nutrición, nací en Rocha y crecí en Montevideo, Uruguay. Desde muy joven me interesé por la alimentación y cómo influye en nuestra salud y bienestar. A lo largo de los años, tuve la oportunidad de conocer diferentes culturas alimentarias y estilos de vida, lo que me permitió comprender que la nutrición no es solo una cuestión biológica, sino también cultural y social; los alimentos cuentan historias y forman parte de nuestra identidad.
+                        <br>Mi pasión por la salud y la alimentación me llevó a estudiar Nutrición, donde adquirí herramientas para guiar a las personas hacia un estilo de vida más saludable, respetando sus hábitos y preferencias. Durante mi formación y práctica profesional, he trabajado con personas de todas las edades, tanto sanas como con distintas condiciones médicas, siempre buscando mejorar y mantener su bienestar físico y emocional, promoviendo la educación nutricional como base para hábitos duraderos.
+                        <br>Me gusta cocinar, experimentar con recetas saludables y compartir momentos de comida con mi familia y amigos. Además, me apasiona el deporte y la actividad física, especialmente salir a caminar y disfrutar del aire libre.
+                        <br>Como profesional de la salud, mi objetivo es acompañar a cada persona a desarrollar hábitos de alimentación equilibrados y sostenibles, fomentando la práctica de actividad física y un estilo de vida que favorezca la calidad de vida, sin perder el placer de comer bien.</p>
 
                     <h3>Formación</h3>
-                    <p>Formación académica o profesional. Mors enim est terribilis ut Socrati aliud esse appareat. Sed timor.</p>
+                    <p>Licenciatura en Nutrición – Universidad de Uruguay. Especialización en nutrición clínica.</p>
                 </div>
 
                 <div class="sobremi-foto">
