mejoras devolucion entrega tres

--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO básico -->
+    <title>Nutricionista Camila Guidotti | Uruguay</title>
+    <meta name="description" content="Sitio web de Camila Guidotti, nutricionista en Montevideo, con información sobre planes de nutrición, recetas saludables y contacto.">
+    <meta name="keywords" content="nutricionista, Montevideo, planes de alimentación, recetas, contacto">
+    <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="./css/styles.css">
-    <title>Nutricionista Camila Guidotti | Uruguay</title>
+    
 </head>
 <body>
+    <!-- HEADER: Logo y navegación -->
     <header> 
     <div class="header-container d-flex flex-wrap justify-content-between align-items-center">
             <div class="profile d-flex align-items-center">
@@ -51,7 +57,8 @@
         </div>
     </header>
    <main>
-        <section class="hero">
+    <!-- HERO: Imagen principal y CTA -->    
+    <section class="hero">
             <div class="hero-image">
                 <img src="./images/pexels-mix-and-match-studio-2662809-4227061.jpg" alt="Foto de Camila Guidotti">
             </div>
@@ -65,6 +72,7 @@
         </section>
     </main>
 
+    <!-- FOOTER: Información de contacto -->
     <footer>
         <div class="footer-container">
             <div class="footer-location">
