--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO básico -->
+    <title>Contacto | Camila Guidotti, Nutricionista</title>
+    <meta name="description" content="Contacta a Camila Guidotti, nutricionista en Montevideo, para consultas, planes de nutrición o asesoramiento personalizado.">
+    <meta name="keywords" content="contacto, nutricionista, Montevideo, consultas, planes de alimentación">
+    <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Nutricionista Camila Guidotti | Uruguay</title>
 </head>
 <body>
+    <!-- HEADER: Logo y navegación -->
     <header> 
     <div class="header-container d-flex flex-wrap justify-content-between align-items-center">
             <div class="profile d-flex align-items-center">
@@ -52,6 +57,7 @@
     </header>
     
     <main>
+        <!-- CONTACTO: Formulario de contacto -->
         <section class="contacto">
             <div class="contacto-header">
                 <h2>Contacto</h2>
@@ -81,6 +87,7 @@
         </section>
     </main>
 
+    <!-- FOOTER: Información de contacto -->
     <footer>
         <div class="footer-container">
             <div class="footer-location">
