--- a/pages/planes.html
+++ b/pages/planes.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO básico -->
+    <title>Planes de Nutrición | Camila Guidotti</title>
+    <meta name="description" content="Conoce los planes de nutrición personalizados de Camila Guidotti, diseñados para mejorar tus hábitos alimentarios y mantener tu salud a largo plazo.">
+    <meta name="keywords" content="planes de nutrición, consulta nutricional, seguimiento, hábitos saludables, Montevideo">
+    <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Nutricionista Camila Guidotti | Uruguay</title>
 </head>
 <body>
+    <!-- HEADER: Logo y navegación -->
     <header> 
     <div class="header-container d-flex flex-wrap justify-content-between align-items-center">
             <div class="profile d-flex align-items-center">
@@ -51,19 +56,29 @@
         </div>
     </header>
      <main>
+        <!-- PLANES: Sección de servicios -->
         <section class="planes">
             <div class="planes-container">
                 <div class="plan-card">
+                    <div class="plan-img">
+                        <img src="/images/plan1.jpg" alt="Consulta nutricional">
+                    </div>
                     <h2>Consulta</h2>
                     <p>Sesión individual para evaluación nutricional y recomendaciones personalizadas.</p>
                     <a href="contacto.html" class="plan-button">Me interesa</a>
                 </div>
                 <div class="plan-card">
+                    <div class="plan-img">
+                        <img src="/images/plan2.jpg" alt="Plan nutricional">
+                    </div>
                     <h2>Plan</h2>
                     <p>Plan mensual con seguimiento semanal y ajustes según tu progreso.</p>
                     <a href="contacto.html" class="plan-button">Me interesa</a>
                 </div>
                 <div class="plan-card">
+                    <div class="plan-img">
+                        <img src="/images/plan3.jpg" alt="Seguimiento nutricional">
+                    </div>
                     <h2>Plan <br><span class="subtitulo">Seguimiento</span></h2>
                     <p>Seguimiento personalizado para mantener hábitos saludables a largo plazo.</p>
                     <a href="contacto.html" class="plan-button">Me interesa</a>
@@ -72,6 +87,7 @@
         </section>
     </main>
 
+    <!-- FOOTER: Información de contacto -->
     <footer>
         <div class="footer-container">
             <div class="footer-location">
