--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO básico -->
+    <title>Recetas Saludables | Camila Guidotti</title>
+    <meta name="description" content="Descubre recetas saludables y fáciles de preparar con Camila Guidotti, nutricionista en Montevideo. Ideas para mejorar tu alimentación diaria.">
+    <meta name="keywords" content="recetas saludables, nutrición, alimentación equilibrada, Montevideo">
+    <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Nutricionista Camila Guidotti | Uruguay</title>
 </head>
 <body>
+    <!-- HEADER: Logo y navegación -->
     <header> 
     <div class="header-container d-flex flex-wrap justify-content-between align-items-center">
             <div class="profile d-flex align-items-center">
@@ -51,6 +56,7 @@
         </div>
     </header>
     <main>
+        <!-- RECETAS: Sección de recetas saludables -->
         <section class="recetas">
             <div class="recetas-header">
                 <h2>Recetas</h2>
@@ -73,6 +79,7 @@
         </section>
     </main>
 
+    <!-- FOOTER: Información de contacto -->
     <footer>
         <div class="footer-container">
             <div class="footer-location">
