--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO básico -->
+    <title>Sobre mí | Camila Guidotti, Nutricionista</title>
+    <meta name="description" content="Conoce la trayectoria y experiencia de Camila Guidotti, nutricionista en Montevideo, apasionada por la alimentación saludable y el bienestar.">
+    <meta name="keywords" content="nutricionista, Montevideo, sobre mí, experiencia, trayectoria">
+    <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Nutricionista Camila Guidotti | Uruguay</title>
 </head>
 <body>
+    <!-- HEADER: Logo y navegación -->
     <header> 
         <div class="header-container d-flex flex-wrap justify-content-between align-items-center">
             <div class="profile d-flex align-items-center">
@@ -52,6 +57,7 @@
     </header>
 
    <main>
+    <!-- SOBRE MÍ: Presentación y Formación -->
         <section class="sobremi">
             <div class="sobremi-content">
                 <div class="sobremi-texto">
@@ -72,6 +78,7 @@
         </section>
     </main>
 
+    <!-- FOOTER: Información de contacto -->
     <footer>
         <div class="footer-container">
             <div class="footer-location">
