--- a/pages/planes.html
+++ b/pages/planes.html
@@ -61,7 +61,7 @@
             <div class="planes-container">
                 <div class="plan-card">
                     <div class="plan-img">
-                        <img src="/images/plan1.jpg" alt="Consulta nutricional">
+                        <img src="https://images.unsplash.com/photo-1501504905252-473c47e087f8?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1074" alt="Consulta nutricional">
                     </div>
                     <h2>Consulta</h2>
                     <p>Sesión individual para evaluación nutricional y recomendaciones personalizadas.</p>
@@ -69,7 +69,7 @@
                 </div>
                 <div class="plan-card">
                     <div class="plan-img">
-                        <img src="/images/plan2.jpg" alt="Plan nutricional">
+                        <img src="https://images.unsplash.com/photo-1494390248081-4e521a5940db?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1406" alt="Plan nutricional">
                     </div>
                     <h2>Plan</h2>
                     <p>Plan mensual con seguimiento semanal y ajustes según tu progreso.</p>
@@ -77,7 +77,7 @@
                 </div>
                 <div class="plan-card">
                     <div class="plan-img">
-                        <img src="/images/plan3.jpg" alt="Seguimiento nutricional">
+                        <img src="https://images.unsplash.com/photo-1606859191214-25806e8e2423?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1435" alt="Seguimiento nutricional">
                     </div>
                     <h2>Plan <br><span class="subtitulo">Seguimiento</span></h2>
                     <p>Seguimiento personalizado para mantener hábitos saludables a largo plazo.</p>
